--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,24 +16,46 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Run AirCanva script
       run: |
         python AirCanva.py
+
     - name: Test with pytest
       run: |
         pytest
+
+    - name: Show directory contents
+      run: |
+        echo "Listing root directory contents"
+        ls -al
+        echo "Listing directory contents where script is located"
+        ls -al path/to/your/script
+
+    - name: Debug Environment Variables
+      run: |
+        echo "Listing environment variables"
+        printenv
+
+    - name: Check Installed Packages
+      run: |
+        echo "Listing installed packages"
+        pip list
