--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-numpy
-opencv-python
-mediapipe
+numpy~=1.23.5
+opencv-python~=4.10.0.84
+mediapipe~=0.10.14
+tensorflow~=2.17.0
+scikit-learn~=1.5.1
+flask~=3.0.3
