--- a/Extention/manifest.json
+++ b/Extention/manifest.json
@@ -1,13 +1,12 @@
 {
   "manifest_version": 3,
   "name": "AirCanva Extension",
-  "description": "Interactive painting tool using hand gestures with OpenCV and MediaPipe.",
   "version": "1.0",
+  "description": "Start AirCanva using a Chrome Extension",
   "permissions": [
-    "tabs",
     "activeTab",
     "storage",
-    "http://127.0.0.1:5000"
+    "scripting"
   ],
   "background": {
     "service_worker": "background.js"
@@ -35,11 +34,15 @@
     {
       "resources": [
         "Webpage.html",
+        "popup.js",
         "images/icon16.jpeg",
         "images/icon48.jpeg",
         "images/icon128.jpeg"
       ],
       "matches": ["<all_urls>"]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  }
 }
